# EvoClaw

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  DASHBOARD_TASK.md  DESIGN.md  LICENSE  P0_TASK.md  P1_TASK.md  P2_TASK.md  P3_TASK.md  P4_TASK.md  PHASE1_TASK.md  PROJECT_STATUS.md  README.md
.claude/: settings.local.json
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd-validation-report.md  prd.md  sprint-plan.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
cmake/: Dependencies.cmake  compiler_options.cmake  dependencies.cmake
config/: constitution.yaml  evoclaw.yaml.example  risk_levels.yaml
doc_design/: EvoClaw_Design_v1.docx  EvoClaw_Design_v2.docx  EvoClaw_Design_v3.docx  EvoClaw_Design_v4.docx  EvoClaw_Design_v5.docx  EvoClaw_Technical_Architecture.md  EvoClaw_Unified_Design.md  claude_QA.md  claude_QA_V5.md  evoclaw_v1.md  evoclaw_v2.md  evoclaw_v3.md  evoclaw_v4.md  gptv5.md  grokV4.md  grok_QA.md  ~$oClaw_Design_v2.docx  苏格拉底圆桌.md
doc_design/a2a/: README.md  cortex-architecture.md  integration-plan.md  nltc-agent-integration.md  nltc-protocol-spec.md
doc_design/free_energy/: parameter.md  word_model.md
docs/: README.md
examples/: CMakeLists.txt  basic_usage.cpp  evolution_demo.cpp  server_demo.cpp
lib/: CMakeLists.txt
lib/bus/: CMakeLists.txt  message_bus.h  zmq_message_bus.cpp  zmq_message_bus.h
lib/common/: CMakeLists.txt  error.h  sha256.h  thread_pool.h  uuid.cpp  uuid.h
lib/config/: CMakeLists.txt  config.h  yaml_config.cpp  yaml_config.h
lib/event_log/: CMakeLists.txt  event_merger.cpp  event_merger.h  event_store.h  jsonl_event_store.cpp  jsonl_event_store.h
lib/llm/: CMakeLists.txt  llm_client.h  openai_client.cpp  openai_client.h  prompt_registry.cpp  prompt_registry.h
lib/memory/: CMakeLists.txt  fs_memory_store.cpp  fs_memory_store.h  memory_index.h  memory_store.h  memory_types.h
lib/protocol/: CMakeLists.txt  basic_rule_engine.cpp  basic_rule_engine.h  cerebellum.cpp  cerebellum.h  message.h  message_types.h  rule_engine.h  serializer.cpp  serializer.h
prompts/compiler/: compilation.txt  compilation.yaml  pattern_recognition.txt  pattern_recognition.yaml
prompts/facade/: system_persona.txt  system_persona.yaml  task_analysis.txt  task_analysis.yaml
prompts/holon/: critic.txt  critic.yaml  executor.txt  executor.yaml  planner.txt  planner.yaml
prompts/router/: intent_classification.txt  intent_classification.yaml
scripts/: evoclaw.sh  watchdog.sh
src/agent/: agent.cpp  agent.hpp  critic.cpp  critic.hpp  executor.cpp  executor.hpp  planner.cpp  planner.hpp
src/budget/: budget_tracker.cpp  budget_tracker.hpp
src/compiler/: CMakeLists.txt  compiler.cpp  compiler.h  compiler.hpp  evolver.h  main.cpp  observer.h  pattern.hpp  pattern_registry.h
src/core/: types.hpp
src/dashboard/: CMakeLists.txt  main.cpp  rest_api.h  sse_handler.h
src/dashboard/static/: index.html
src/engine/: CMakeLists.txt  engine.h  main.cpp
src/engine/facade/: discord_bot.h  facade.cpp  facade.h
src/engine/governance/: constitution.cpp  constitution.h  entropy_monitor.cpp  entropy_monitor.h  governance_gate.cpp  governance_gate.h
src/engine/holon/: holon.h  holon_pool.h
src/engine/holon/capabilities/: capability.h  file_capability.cpp  file_capability.h  file_ops.h  network_ops.h  process_ops.h  shell_capability.cpp  shell_capability.h  shell_ops.h
src/engine/router/: capability_matrix.cpp  capability_matrix.h  epsilon_greedy.h  router.cpp  router.h
src/engine/safety/: permission_manager.cpp  permission_manager.h  risk_classifier.cpp  risk_classifier.h  sandbox.h
src/entropy/: entropy_monitor.cpp  entropy_monitor.hpp
src/event_log/: event_log.cpp  event_log.hpp
src/evolution/: evolution_budget.cpp  evolution_budget.hpp  evolver.cpp  evolver.hpp  tension.hpp
src/facade/: facade.cpp  facade.hpp
src/governance/: constitution.hpp  governance_kernel.cpp  governance_kernel.hpp
src/judge/: CMakeLists.txt  main.cpp  meta_judge.h
src/llm/: llm_client.cpp  llm_client.hpp
src/memory/: org_log.cpp  org_log.hpp  working_memory.cpp  working_memory.hpp
src/protocol/: bus.cpp  bus.hpp  message.hpp
src/router/: capability_matrix.hpp  router.cpp  router.hpp
src/server/: dashboard.hpp  server.cpp  server.hpp
src/slp/: semantic_primitive.cpp  semantic_primitive.hpp
src/umi/: contract.hpp  validator.hpp
src/zone/: zone.hpp  zone_manager.cpp  zone_manager.hpp
tests/: CMakeLists.txt  test_agent.cpp  test_budget.cpp  test_compiler.cpp  test_core.cpp  test_entropy.cpp  test_event_log.cpp  test_evolution.cpp  test_governance.cpp  test_integration.cpp  test_llm.cpp  test_matrix_persistence.cpp  test_memory.cpp  test_org_log_query.cpp  test_protocol.cpp  test_router.cpp  test_server_runtime_config_api.cpp  test_slp.cpp  test_umi.cpp  test_zone.cpp
tests/integration/: bus_integration_test.cpp
tests/lib/bus/: zmq_message_bus_test.cpp
tests/lib/common/: common_test.cpp
tests/lib/config/: yaml_config_test.cpp
tests/lib/event_log/: event_merger_test.cpp  jsonl_event_store_test.cpp
tests/lib/llm/: openai_client_test.cpp  prompt_registry_test.cpp
tests/lib/memory/: fs_memory_store_test.cpp
tests/lib/protocol/: basic_rule_engine_test.cpp  cerebellum_test.cpp  serializer_test.cpp
tests/src/engine/: facade_test.cpp  governance_test.cpp  router_test.cpp  safety_test.cpp
